<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:text="@string/title_converter"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_conversor_title"
        android:background="@drawable/textview_border"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputValorDollarCurrency"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/input_current_change"

        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/titleText"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="@+id/titleText"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/euroInfo"
        android:text="@string/info_euro"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputValorDollarCurrency"
        app:layout_constraintStart_toEndOf="@+id/inputValorDollarCurrency" />

    <TextView
        android:id="@+id/dolarInfo"
        android:text="@string/info_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputValorDollarCurrency"
        app:layout_constraintEnd_toStartOf="@+id/inputValorDollarCurrency" />

    <Button
        android:id="@+id/btnMasDolar"
        android:text="@string/button_plus"
        android:backgroundTint="@color/background_purple"
        android:onClick="modificarDolar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputValorDollar"
        app:layout_constraintStart_toEndOf="@+id/inputValorDollar" />

    <Button
        android:id="@+id/btnMenosDolar"
        android:text="@string/button_minus"
        android:backgroundTint="@color/background_purple"
        android:onClick="modificarDolar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputValorDollar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/inputValorDollar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMenosEuro"
        android:text="@string/button_minus"
        android:backgroundTint="@color/background_purple"
        android:onClick="modificarEuro"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/inputValorEuro"
        app:layout_constraintTop_toTopOf="@+id/inputValorEuro" />

    <EditText
        android:id="@+id/inputValorDollar"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/info_dollar"

        android:layout_width="132dp"
        android:layout_height="42dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/inputValorDollarCurrency"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputValorDollarCurrency"
        app:layout_constraintTop_toBottomOf="@+id/inputValorDollarCurrency" />

    <Button
        android:id="@+id/btnMasEuro"
        android:text="@string/button_plus"
        android:backgroundTint="@color/background_purple"
        android:onClick="modificarEuro"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputValorEuro"
        app:layout_constraintStart_toEndOf="@+id/inputValorEuro" />

    <EditText
        android:id="@+id/inputValorEuro"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/info_euro"

        android:layout_width="129dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="@+id/inputValorDollar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputValorDollar"
        app:layout_constraintTop_toBottomOf="@+id/inputValorDollar" />

</androidx.constraintlayout.widget.ConstraintLayout>